syntax = "proto3";

package api.proj;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";

option go_package = "store/api/proj;projpb";

message CreditState {
  int64 remaining = 1;
  int64 cost = 2;
  int64 total = 3;
  string userId = 4;
  string planId = 5;
}

message CreditRecharge {
  string _id = 1 [json_name = '_id'];
  int64 amount = 2;
  string userId = 3;
  string planId = 4;
  int64 createdAt = 5;
  int64 expireAt = 6;
  int64 cost = 7;
}

message CreditCost {
  string _id = 1 [json_name = '_id'];
  int64 amount = 2;
  string userId = 3;
  string rechargeId = 4;
  int64 createdAt = 5;
  string key = 6;
}



message Payment {
  string _id = 1 [json_name = '_id'];
  int64 createdAt = 2;
  string userId = 3;
  string planId = 4;
  string status = 5;
}


message Metadata {
  message Plan {
    string id = 1;
    string title = 2;
    double amount = 3;
    int64 quota = 4;
  }

  repeated Plan plans = 1;
}
